css/index.css
html {
	box-sizing: border-box;
	width: 100%;
}

*, *:before, *:after {
	box-sizing: inherit;
}

* {	
	margin: 0;
	padding: 0;
}

article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}

body {
	color: #333;
	font: 18px/1.2 'Roboto', sans-serif;
	width: 100%;
}

nav {
	background: #fff;
	color: #203864;
	position: fixed;
	width: 100%;
	max-width: 1000px;
	margin: 0 auto;
	left: 0;
	right: 0;
	text-align: center;
	text-transform: uppercase;
	font-size: 0.8rem;
	letter-spacing: 0.2em;
	font-weight: 900;
	z-index: 10;
}

nav ul {
	display: inline-block;
	margin: 0 auto;
}

nav li {
	display: inline-block;
	text-align: center;
}

nav a {
	color: inherit;
	display: inline-block;
	padding: 1em 2em;
	text-decoration: none;
}

header {
	align-items: center;
	display: flex;
	max-height: 500px;
	width: 100%;
	overflow: hidden;
}

header img {
	align-self: flex-start;
	width: 100%;
}

main {
	background: #fff;
	width: 100%;
	max-width: 1000px;
	margin: 0 auto;
	padding: 2rem;
	position: relative;
	top: -5rem;
}

h1 {
	color: #203864;
	font-size: 6rem;
	font-family: 'Bricolage Grotesque', sans-serif;
	letter-spacing: 0.04em;
	font-weight: 600;
}

h2 {
	font-size: 2rem;
	font-family: 'Bricolage Grotesque', sans-serif;
	letter-spacing: 0.02em;
	font-weight: 400;
	margin-bottom: 2rem;
}

h3 {
	font-size: 1.5rem;
	font-family: 'Bricolage Grotesque', sans-serif;
	font-weight: 400;
	margin-bottom: 1rem;
}

p {
	margin-bottom: 3rem;
}

figure {
	width: 100%;
}

figure img {
	margin: 1rem auto;
	width: 90%;
}

img.logo {
	display: inline-block;
	height: 3rem;
	margin-right: 1rem;
}

.publication-list {
	margin-top: 3rem;
}

.publication-list p {
	margin-bottom: 1rem;
}

.publication {
	margin: 3rem auto;
	overflow: auto;
}

@media only screen and (max-width: 768px) {
	body {
		font-size: 14px;
	}

	h1 {
		font-size: 3rem;
	}

	h2 {
		font-size: 1.5rem;
	}
}

